--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@ because of the huge amount of plataforms and social media nowadays I decided to 
             <br>
             upcoming shows:
             <br><br>
-            12.03.2020 • TBA •  CDMX/Mexiko • 
+            12.03.2020 • CDMX/Mexiko • 
             <br>
-            26.04.2020 • BeateUwe •  Berlin/Germany • 
+            26.04.2020 • Berlin/Germany • 
             <br>
-            30.05.2020 • Angebot • Kopenhagen/Denmark •
+            30.05.2020 • Kopenhagen/Denmark •
             <br>
-            08.08.2020 • Tangerine showcase • Porto/Portugal •
+            08.08.2020 • Porto/Portugal •
             <br>
             <br>
             for other info please contact@exzlive.de
